tests/ui/parser/qualified-path-in-turbofish.stderr
error: found single colon before projection in qualified path
  --> $DIR/qualified-path-in-turbofish.rs:17:27
   |
LL |     template::<<Impl as T>:Ty>();
   |                           ^ help: use double colon: `::`

error: aborting due to 1 previous error

